# typed-geojson

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  release-plz.toml  seo-kit.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: geojson.rs
examples/: export_bindings.rs
seo-reports/: typed-geojson-20260702T054204Z.json  typed-geojson-20260702T054204Z.md
src/: geometry.rs  lib.rs
tests/: roundtrip.rs
ts/: assignability.ts  bindings.ts  package-lock.json  package.json  tsconfig.json
