[package]
name = "typed-geojson"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Strongly-typed GeoJSON — Feature<T> and FeatureCollection<T> with typed properties, layered over the georust geojson crate."
repository = "https://github.com/johncarmack1984/typed-geojson"
documentation = "https://docs.rs/typed-geojson"
readme = "README.md"
keywords = ["geojson", "geospatial", "serde", "typed", "geo"]
categories = ["science::geo", "encoding"]
# The TS assignability harness and CI config aren't needed by crate consumers.
exclude = ["/ts", "/.github"]

[features]
# Derive `specta::Type` for every public type, so a Rust function returning a
# typed-geojson value exports to `@types/geojson`-assignable TypeScript.
specta = ["dep:specta"]

[dependencies]
geojson = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.25", optional = true, features = ["derive", "serde_json"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
specta-typescript = "0.0.12"
specta-serde = "0.0.12"
criterion = "0.5"

[[bench]]
name = "geojson"
harness = false

[[example]]
name = "export_bindings"
required-features = ["specta"]

[package.metadata.docs.rs]
all-features = true
